@@ -1,3 +1,8 @@
+2011-05-11  Marek Polacek  <mpolacek@redhat.com>
+
+	* nm.c (show_symbols_sysv): Remove unused if/else, remove
+	unused `prefix' and `fname' parameters.
+
 2011-05-07  Marek Polacek  <mpolacek@redhat.com>
 
 	* unstrip.c (compare_sections_nonrel): Mark this function as static.
